# vibe

./: .env.example  .gitignore  Dockerfile.app  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: api_keys.example.yaml
docs/customer/: INSTALL.md  README.md
docs/superpowers/plans/: 2026-05-21-v-client.md
docs/superpowers/specs/: 2026-05-21-clean-code-audit.md  2026-05-21-vibevoice-impl-design.md
scripts/: build_bundle.sh  clone_upstream.sh  lint_all.sh  load_images.sh  preflight.sh  retention_cleanup.py  smoke_test.sh  wait_for_ready.sh
src/gateway/: main.py  rest_health.py  rest_hotwords.py  rest_jobs.py  rest_models.py  upload_writer.py  ws_transcribe.py
src/shared/: auth.py  config.py  db.py  error_codes.py  hotword_merger.py  prompt_builder.py  result_writer.py  utils.py  validation.py
src/worker/: audio_normalizer.py  main.py  output_parser.py  repetition_detector.py  sse_parser.py  vllm_client.py
tests/: conftest.py
tests/e2e/: test_real_vllm.py
tests/fixtures/: fake_vllm.py
tests/integration/: test_hotwords_crud.py  test_transcribe_task.py  test_ws_transcribe.py
tests/unit/: test_audio_normalizer.py  test_auth.py  test_config.py  test_db.py  test_hotword_merger.py  test_hotword_repository.py  test_job_repository.py  test_output_parser.py  test_prompt_builder.py  test_repetition_detector.py  test_rest_health_models.py  test_rest_jobs.py  test_result_writer.py  test_retention_cleanup.py  test_sse_parser.py  test_upload_writer.py  test_validation.py  test_vllm_client.py  test_ws_helpers.py
(+4 files in other folders)
